--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
     "mongoose": "^8.14.1",
     "next": "14.2.28",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.34.1",
