--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.3",
     "sharp": "^0.34.1",
+    "slugify": "^1.6.6",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
