--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.4",
@@ -27,6 +28,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.3",
     "react-toastify": "^11.0.5",
+    "sass": "^1.89.0",
     "sharp": "^0.34.1",
     "slugify": "^1.6.6",
     "svix": "^1.64.1",
