--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
     "@hookform/resolvers": "^5.0.1",
+    "@mux/mux-player": "^3.4.0",
+    "@mux/mux-player-react": "^3.4.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -19,6 +21,8 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@tinymce/tinymce-react": "^6.1.0",
     "@uploadthing/react": "^7.3.1",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
@@ -39,7 +43,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.2",
     "use-immer": "^0.11.0",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
