--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.507.0",
     "mongoose": "^8.14.1",
     "next": "14.2.28",
@@ -47,6 +48,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
