--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sweetalert2": "^11.21.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tinymce": "^7.9.1",
     "uploadthing": "^7.7.2",
     "use-immer": "^0.11.0",
     "zod": "^3.24.4",
