--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@tinymce/tinymce-react": "^6.1.0",
     "@uploadthing/react": "^7.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.507.0",
@@ -32,6 +36,7 @@
     "next": "14.2.28",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.56.3",
     "react-toastify": "^11.0.5",
